moved changes for dbclient to new branch for easier review